# aide

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  justfile  pyproject.toml
.github/: dependabot.yml
docs/: codex-support-plan.md  decisions.md  handoff-2026-05-04.md  plan.md
docs/screenshots/: take-screenshots.mjs
scripts/: codex-status.sh
src/aide/: __init__.py  __main__.py  actions.py  artifacts.py  brief.py  claude_parser.py  cli.py  codex_parser.py  config.py  cost.py  db.py  digest.py  effectiveness.py  jobs.py  models.py  parser.py  providers.py  publication.py  redaction.py  runbook.py
src/aide/autopsy/: analyzer.py  queries.py  report.py  suggestions.py
src/aide/web/: app.py  queries.py  routes.py
src/aide/web/static/: charts.js
src/aide/web/templates/: 404.html  artifacts.html  base.html  brief.html  effectiveness.html  insights.html  overview.html  projects.html  runbook.html  session_detail.html  sessions.html  tools.html
tests/: conftest.py  test_actions.py  test_artifacts.py  test_autopsy.py  test_brief.py  test_cli.py  test_codex_parser.py  test_config.py  test_cost.py  test_db.py  test_digest.py  test_effectiveness.py  test_jobs.py  test_mixed_provider_smoke.py  test_parser.py  test_providers.py  test_publication.py  test_redaction.py  test_runbook.py  test_web.py
tests/fixtures/: codex-redacted.jsonl  sample.jsonl  sample2.jsonl
