[project]
name = "aide-dashboard"
version = "0.1.0"
description = "AI Developer Effectiveness dashboard — track your AI coding productivity"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Brian Liou" },
]
keywords = ["claude", "ai", "developer-tools", "productivity", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
]
dependencies = [
    "click>=8.0",
    "flask>=3.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/brianhliou/aide"
Repository = "https://github.com/brianhliou/aide"
Changelog = "https://github.com/brianhliou/aide/blob/main/CHANGELOG.md"

[project.scripts]
aide = "aide.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aide"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
